# esp32_projects

./: README.md
ESP32_S3_Touch_LCD_1p85/: CMakeLists.txt  sdkconfig
ESP32_S3_Touch_LCD_1p85/main/: CMakeLists.txt  main.c  main.cpp
ESP32_S3_Touch_LCD_1p85/main/Audio_Driver/: PCM5101.h
ESP32_S3_Touch_LCD_1p85/main/BAT_Driver/: BAT_Driver.h
ESP32_S3_Touch_LCD_1p85/main/EXIO/: TCA9554PWR.h
ESP32_S3_Touch_LCD_1p85/main/I2C_Driver/: I2C_Driver.h
ESP32_S3_Touch_LCD_1p85/main/LCD_Driver/: ST77916.c  ST77916.h
ESP32_S3_Touch_LCD_1p85/main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
ESP32_S3_Touch_LCD_1p85/main/LVGL_UI/: LVGL_Example.c  LVGL_Example.h  LVGL_Music.h
ESP32_S3_Touch_LCD_1p85/main/MIC_Driver/: MIC_Speech.h
ESP32_S3_Touch_LCD_1p85/main/PCF85063/: PCF85063.h
ESP32_S3_Touch_LCD_1p85/main/PWR_Key/: PWR_Key.h
ESP32_S3_Touch_LCD_1p85/main/QMI8658/: QMI8658.h
ESP32_S3_Touch_LCD_1p85/main/SD_Card/: SD_MMC.h
ESP32_S3_Touch_LCD_1p85/main/Touch_Driver/: CST816.c  CST816.h
ESP32_S3_Touch_LCD_1p85/main/Wireless/: Wireless.h
esp32_media_player/: CMakeLists.txt
esp32_media_player/main/: CMakeLists.txt
esp32_media_player/main/include/: AudioPlayer.hpp  GlobalConfig.h  MediaPlayer.hpp  SdCard.hpp
esp32_media_player/main/src/: AudioPlayer.cpp  MediaPlayer.cpp  SdCard.cpp  main.cpp
